<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fr.teiki.ibs.BeaconSettingsActivity">

        <EditText
            android:id="@+id/beacon_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:hint="@string/ibeacon_personal_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/save_beacon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_save"
            android:layout_alignTop="@id/beacon_name"
            android:layout_toRightOf="@id/beacon_name"/>

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/beacon_name"
            android:text="@string/dont_disturb"
            android:checked="false" />

        <RelativeLayout
            android:id="@+id/notification_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_notification"
            android:visibility="gone">



            <include
                layout="@layout/notification_perimeter_parameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>





        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/notification_options"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/holo_green_dark" />

        <Switch
            android:id="@+id/switch_launch_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_app"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/v1"
            android:checked="false" />

        <Button
            android:id="@+id/distance_launch_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_launch_app"
            android:visibility="gone"
            android:layout_marginTop="2dp"
            android:drawableRight="@android:drawable/ic_menu_add"
            android:text="@string/save_distance" />


        <View
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/distance_launch_app"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/holo_green_dark" />

        <Switch
            android:id="@+id/switch_wifi_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_state"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/v2"
            android:checked="false" />

        <RadioGroup
            android:id="@+id/radiogroup_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_wifi_state"
            android:visibility="gone"
            android:orientation="horizontal"
            android:weightSum="100">

            <RadioButton
                android:id="@+id/wifi_activate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activate"
                android:layout_weight="50" />

            <RadioButton
                android:id="@+id/wifi_desactivate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/desactivate"
                android:checked="true"
                android:layout_weight="50" />
        </RadioGroup>

        <Button
            android:id="@+id/distance_wifi_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radiogroup_wifi"
            android:visibility="gone"
            android:layout_marginTop="2dp"
            android:drawableRight="@android:drawable/ic_menu_add"
            android:text="@string/save_distance" />

        <!--<View-->
        <!--android:id="@+id/v3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:layout_below="@id/distance_wifi_state"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:background="@android:color/holo_green_dark"/>-->


    </RelativeLayout>
</ScrollView>