<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/activation_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:id="@+id/region_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="48"
            android:gravity="center"
            android:text="@string/region" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@android:color/black"
            android:text="@string/or" />

        <RadioButton
            android:id="@+id/perimeter_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="48"
            android:gravity="center"
            android:text="@string/perimetre" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/immediate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/immediate"
        android:layout_below="@id/activation_mode" />


    <RadioGroup
        android:id="@+id/immediate_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/immediate"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:weightSum="99">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_sound"
            android:layout_weight="33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_vibrate"
            android:layout_weight="33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_star"
            android:layout_weight="33" />

    </RadioGroup>

    <Button
        android:id="@+id/perimeter_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_toRightOf="@id/immediate"
        android:layout_toLeftOf="@id/immediate_sound"
        android:layout_alignTop="@id/immediate"/>

    <CheckBox
        android:id="@+id/near"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/immediate_sound"
        android:text="@string/near" />


    <RadioGroup
        android:id="@+id/near_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/near"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:weightSum="99">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_sound"
            android:layout_weight="33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_vibrate"
            android:layout_weight="33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_star"
            android:layout_weight="33" />

    </RadioGroup>

    <Button
        android:id="@+id/perimeter_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_toRightOf="@id/near"
        android:layout_toLeftOf="@id/near_sound"
        android:layout_alignTop="@id/near" />

    <CheckBox
        android:id="@+id/far"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/near_sound"
        android:text="@string/far" />


    <RadioGroup
        android:id="@+id/far_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/far"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:weightSum="99">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_sound"
            android:layout_weight="33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_vibrate"
            android:layout_weight="33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/my_star"
            android:layout_weight="33" />

    </RadioGroup>

    <Button
        android:id="@+id/perimeter_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_toRightOf="@id/far"
        android:layout_toLeftOf="@id/far_sound"
        android:layout_alignTop="@id/far" />

</RelativeLayout>